# assetlog

./: .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  docker-compose.yml  release-please-config.json
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20a532087071_add_tag_to_transactions.py  36d1bb1747be_create_users_table.py  6c7b2345d068_create_cash_accounts_table.py  a2f8c3d91e45_create_asset_symbol_and_user_asset.py  a79eb8a519a3_create_fx_rates_table.py  b400f96993ed_merge_price_refresh_and_symbol_search_.py  bb1257ce7410_create_login_attempts_table.py  c1d4f8e2b3a7_add_last_price_to_asset_symbols.py  c8a4f1e927b3_drop_users_table_and_user_id.py  d2e5a9f1c8b4_create_price_points_table.py  e4a7c2d15f09_add_last_synced_at_to_asset_symbols.py  f3b9e1c72d06_create_transactions_table.py
backend/app/: exceptions.py  main.py
backend/app/adapters/: __init__.py  _symbol_cache.py  base.py  crypto.py  fx.py  kr_stock.py  normalize.py  us_stock.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  deps.py  principal.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/domain/: __init__.py  asset_type.py  portfolio.py  portfolio_history.py  price_refresh.py  symbol_search.py  tag_breakdown.py  transaction_type.py
backend/app/models/: __init__.py  asset_symbol.py  cash_account.py  fx_rate.py  holding.py  login_attempt.py  price.py  price_point.py  transaction.py  user.py  user_asset.py
backend/app/repositories/: _dialect.py  asset_symbol.py  cash_account.py  fx_rate.py  login_attempt.py  portfolio.py  portfolio_history.py  price_point.py  transaction.py  user.py  user_asset.py
backend/app/routers/: auth.py  bulk_transaction.py  cash_account.py  export.py  fx.py  portfolio.py  sample.py  symbol.py  transaction.py  user_asset.py
backend/app/scheduler/: __init__.py  fx_refresh_job.py  login_attempt_cleanup_job.py  price_refresh_job.py  price_refresher.py
backend/app/schemas/: __init__.py  asset.py  auth.py  bulk_transaction.py  cash_account.py  export.py  fx_rate.py  holding.py  portfolio.py  price.py  sample_seed.py  tag_breakdown.py  transaction.py
backend/app/services/: auth.py  bulk_transaction.py  cash_account.py  data_export.py  fx_rate.py  login_rate_limiter.py  portfolio.py  symbol.py  (+7 more)
backend/scripts/: schema.sql
backend/tests/: conftest.py  test_smoke.py
(+284 files in other folders)
